firebase data is live on the main page but not updating in real time

--- a/src/styles/globalCSS.ejs
+++ b/src/styles/globalCSS.ejs
@@ -11,7 +11,7 @@
         --GRAY-TERTIARY: #373d3d;
         --SHADOW-PRIMARY: 2px 2px 8px rgba(0, 0, 0, 0.43);
         --SHADOW-SLIDER-HOVER: rgba(0, 0, 0, 0.377);
-        --TEXT-SHADOW-PRIMARY: 2px 1px 3px rgb(0 ,0 ,0  ,0.70);
+        --TEXT-SHADOW-PRIMARY: 1px 1px 2px black;
     }
 
     body {
