--- a/src/views/pages/Post/index.ejs
+++ b/src/views/pages/Post/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Como funciona os drops da Twitch</title>
+    <title><%= post.title %></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <%- include('../../../styles/globalCSS.ejs') %>
     <%- include('styles.ejs') %>
@@ -13,14 +13,17 @@
 <body>
     <%- include('../../components/Header/index.ejs') %>
     <Main>
+        <% console.log(post.timestamp) %>
         <section class="noticia">
             <figure>
-                <img src="https://i.ytimg.com/vi/tJKu_PWhczk/maxresdefault.jpg" alt="Ying Carnval">
+                <img src="<%= post.img.url %>" alt="<%= post.img.alt %>">
             </figure>
             <div class="postTitle">
-                <p class="titulo-main-destaque"><i class="fas fa-star"></i> DESTAQUE</p>
-                <p class="titulo-main">Como funciona os drops da Twitch</p>
-                <p class="autor-main"><span>por <strong>Luís Passos</strong> há 2 meses </span><time><i class="far fa-clock"></i> <span class="main-tempo-leitura">4 MIN DE LEITURA</span></time></p>
+                <% if(post.isHighlighted) { %>
+                    <p class="titulo-main-destaque"><i class="fas fa-star"></i> DESTAQUE</p>
+                <% } %>
+                <p class="titulo-main"><%= post.title %></p>
+                <p class="autor-main"><span>por <strong><%= post.author %> </strong> há 2 meses </span><time><i class="far fa-clock"></i> <span class="main-tempo-leitura"><%= post.readTime %> MIN DE LEITURA</span></time></p>
             </div>
         </section>
         <section class="conteudo">
