added content to post page but not updating

--- a/src/views/pages/Post/index.ejs
+++ b/src/views/pages/Post/index.ejs
@@ -26,32 +26,7 @@
             </div>
         </section>
         <section class="conteudo">
-            <h1>&#x1F44B; Introdução</h1>
-            <p>Já pensou em resgatar skins toda semana <strong>totalmente de graça</strong>, apenas assistindo suas lives favoritas? Nesse post iremos esclarecer todas as suas dúvidas sobre esse sistema que chegou ao Reino.</p>
-            <p>Alguns pontos que vamos abordar:</p>
-            <ul>
-                <li>Custo das Skins;</li>
-                <li>Quanto tempo demoro para conseguir uma skin;</li>
-                <li>Como <strong>vincular</strong> sua conta com a Twitch;</li>
-                <li>Site de vendas e compras de Skin;</li>
-            </ul>
-
-            <h1>&#x1F517; Como vincular sua conta com a Twitch</h1>
-            <p>Para vincular, você precisa de uma conta Prime Gaming <strong>(Caso queira a skin fornecida pela Prime Gaming)</strong>. Em seguida, entre nesse site <a rel="external" target="_blank" href="https://gaming.amazon.com/loot/paladins">https://gaming.amazon.com/loot/paladins</a> e você irá se deparar com isto:</p>
-            <img src="../../prime paladins.PNG" alt="Prime Paladins">
-            <p>Clique na foto do personagem que está disponível, clique em resgatar e aparecerá uma opção para vincular as contas. Abra o site da Hirez Studios, coloque seu login e navegue até a Aba <strong>Linked Accounts no ícone da Twitch</strong>. Role a página para baixo e clique em <strong>Link Account</strong>, então vincule as contas.</p>
-            <img src="../../linked accouts.PNG" alt="Linked Accounts">
-            <p>E, TamDan! Conta vinculada com <strong>sucesso</strong>!</p>
-
-            <h1>&#x23F0; Quanto tempo para conseguir uma Skin</h1>
-            <p>Se prepare para uma má notícia, vai demorar <strong>muitooo</strong> para conseguir uma skin.</p>
-            <p>Atualmente cada pessoa ganha em torno de <strong>400</strong> pontos por semana, e cada skin custando por volta de <strong>12 mil</strong> pontos &#x1F4B8;.</p>
-            <p>Para não dizer que é uma perda de tempo, temos o site da <a rel="external" target="_blank" href="https://bounty.paladins.com/">Bounty Store</a>, que é basicamente um site de troca e venda de skins da Twitch, onde você pode encontrar skins bem mais <strong>baratas</strong>.</p>
-
-            <h1>&#x1F44C; Conclusão</h1>
-            <p><strong>Compensa?</strong> Sim!!! Ainda mais que você pode deixar uma aba aberta com a live, sem que precise assistir ela para conseguir os pontos.</p>
-            <p>Até um próximo post e uma <strong>ótima sorte</strong> com o farm!</p>
-
+            <%= post.content %>
         </section>
     </Main>
     <%- include('../../components/Footer/index.ejs') %>
