--- a/src/views/pages/Index/script.ejs
+++ b/src/views/pages/Index/script.ejs
@@ -38,7 +38,7 @@
     // Posts
 
     function goToPost(ref) {
-        location = `/${ref}`
+        location = `/post?${ref}`
     }
     
 </script>
