Html working on post page

--- a/src/views/components/Search/script.ejs
+++ b/src/views/components/Search/script.ejs
@@ -32,5 +32,9 @@
             searchListWrapper.style.display = "none"
         }
     })
+    
+    searchInput.addEventListener("keyup", ()=> {
+       
+    })
 
 </script>
