--- a/src/views/pages/Post/index.ejs
+++ b/src/views/pages/Post/index.ejs
@@ -26,10 +26,11 @@
             </div>
         </section>
         <section class="conteudo">
-            <%= post.content %>
+            <p><%- post.content %></p>
         </section>
     </Main>
     <%- include('../../components/Footer/index.ejs') %>
     <script src="https://kit.fontawesome.com/bc7de74478.js" crossorigin="anonymous"></script>
 </body>
 </html>
+
