putting firebase in the assets folder

--- a/src/views/components/Search/index.ejs
+++ b/src/views/components/Search/index.ejs
@@ -14,4 +14,5 @@
         <li>O baú de Halloween está de volta na loja! <time>Há 2 meses</time></li>
     </ul>
 </form>
+<script src="../../../firebase.js"></script>
 <%- include("script.ejs") %>
