obsolete images removed

--- a/src/views/components/Header/index.ejs
+++ b/src/views/components/Header/index.ejs
@@ -3,7 +3,7 @@
     <header id="mainHeader">
         <div>
             <a href="/">
-            <img class="img-header" src="../../paladins icon.png" alt="Logo">
+            <img class="img-header" src="../../paladins_icon.png" alt="Logo">
                 <p>PALADINS <strong>BLOG</strong></p>
             </a>
         </div>
@@ -31,7 +31,7 @@
     <header id="headerWithSearch">
         <div>
             <a href="/">
-            <img class="img-header" src="../../paladins icon.png" alt="Logo">
+            <img class="img-header" src="../../paladins_icon.png" alt="Logo">
                 <p>PALADINS <strong>BLOG</strong></p>
             </a>
         </div>
