firebase search on front end

--- a/src/views/components/Search/index.ejs
+++ b/src/views/components/Search/index.ejs
@@ -7,11 +7,10 @@
         <hr>
     </div>
     <ul>
-        <li>O baú de Halloween está de volta na loja! <time>Há 2 meses</time></li>
-        <li>O baú de Halloween está de volta na loja! <time>Há 2 meses</time></li>
-        <li>O baú de Halloween está de volta na loja! <time>Há 2 meses</time></li>
-        <li>O baú de Halloween está de volta na loja! <time>Há 2 meses</time></li>
-        <li>O baú de Halloween está de volta na loja! <time>Há 2 meses</time></li>
-    </ul>
+<!--         <li>O baú de Halloween está de volta na loja! <time>Há 2 meses</time></li>
+ -->    </ul>
 </form>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+<%- include("db.ejs") %>
 <%- include("script.ejs") %>
