--- a/src/views/components/Search/index.ejs
+++ b/src/views/components/Search/index.ejs
@@ -1,7 +1,7 @@
 <%- include("styles.ejs") %>
 <form class="search">
     <img title="Fechar" src="../../../close.svg" alt="Botão de fechar">
-    <input placeholder="Procure..." type="search">
+    <input onclick="ola(<%= posts %>)" placeholder="Procure..." type="search">
     <div class="searchInputLines">
         <hr>
         <hr>
@@ -12,5 +12,4 @@
 </form>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-<%- include("db.ejs") %>
 <%- include("script.ejs") %>
