--- a/src/views/components/Search/styles.ejs
+++ b/src/views/components/Search/styles.ejs
@@ -17,7 +17,7 @@
 }
 
 .search > input {
-    width: 330px;
+    width: 360px;
     font-size: 1.2em;
     border: 0;
     outline: 0;
@@ -59,11 +59,11 @@
 }
 
 .search > ul {
-    display: none;
+    width: 100%;
+    display: flex;
     flex-direction: column;
     gap: 10px;
     background: var(--GRAY-TERTIARY);
-    color: white;
     border-radius: 0 0 10px 10px;
     padding: 13px;
     box-shadow: var(--SHADOW-PRIMARY);
@@ -72,17 +72,22 @@
     z-index: 3;
 }
 
-.search > input:focus ~ ul {
-    display: flex;
+.search > ul > a {
+    text-decoration: none;
 }
 
-.search > ul > li {
+.search > ul > a:hover {
+    text-decoration: underline white;
+}
+
+.search > ul > a > li {
+    color: white;
     font-weight: normal;
     font-size: 1.1em;
     line-height: 1.5em;
 }
 
-.search > ul > li > time {
+.search > ul > a > li > time {
     font-size: 0.9em;
     display: block;
 }   
@@ -94,10 +99,6 @@
     }
 
     .search > input {
-        width: 100%;
-    }
-
-    .search > ul {
         width: 100%;
     }
 }
