added project images

--- a/src/views/pages/Post/styles.ejs
+++ b/src/views/pages/Post/styles.ejs
@@ -105,6 +105,10 @@ main {
 
 @media (max-width: 900px) {
 
+    .titulo-main {
+        text-shadow: var(--TEXT-SHADOW-PRIMARY);
+    }
+
     .postTitle {
         position: absolute;
         color: white;
