--- a/src/views/components/Search/script.ejs
+++ b/src/views/components/Search/script.ejs
@@ -14,6 +14,7 @@
     const filteredPosts = ()=> posts.filter(post => post.title.toLowerCase().includes(value.toLowerCase()))
 
     window.addEventListener("click", (event)=> {
+        console.log(event.target)
         if(event.target !== searchListWrapper && event.target !== searchInput && event.target !== openSearchBtns[0]) {
             searchListWrapper.style.display = "none"
         }
